--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = stock_tracker.settings
+pythonpath = .
 python_files = tests.py test_*.py *_tests.py
 addopts = --nomigrations --reuse-db
