--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-import-export==4.3.14
 django-template-partials==25.3
 django-widget-tweaks==1.5.0
 pytest==9.0.2
+pytest-django
 python-dotenv==1.2.1
 pandas==2.3.3
 django-template-partials==25.3
