celery & redis integration, daily and weekly automations, mobile devices UI fixes, minor UI changes etc.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-Django==6.0
-django-allauth==65.13.1
-django-htmx==1.27.0
-django-import-export==4.3.14
-django-template-partials==25.3
-django-widget-tweaks==1.5.0
+Django==5.2.9
+django-allauth
+django-htmx
+django-import-export
+django-template-partials
+django-widget-tweaks
 pytest==9.0.2
 pytest-django
 python-dotenv==1.2.1
 pandas==2.3.3
-django-template-partials==25.3
-django-widget-tweaks==1.5.0
+django-template-partials
+django-widget-tweaks
 et_xmlfile==2.0.0
 iniconfig==2.3.0
 numpy==2.3.5
@@ -28,4 +28,6 @@ pytest-django
 tablib==3.9.0
 psycopg[binary]
 yfinance==0.2.66
-django-crontab>=0.7.1
+celery
+redis
+django-celery-beat
