--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,20 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.pytest_cache/
 
 # Django
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+*.db
+*.rdb
+celerybeat-schedule
+
+
+.dockerignore
+
 
 # Virtual Env
 venv/
@@ -34,6 +42,7 @@ ENV/
 
 # VS Code
 .vscode/
+.idea/
 
 # Environment variables
 .env
@@ -45,3 +54,5 @@ ENV/
 *.xlsx
 db1.sqlite3
 
+# Folders
+dummy/
