--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@
 services:
   stockinsightbackend:
     build: .
+    command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
     env_file:
@@ -11,10 +12,43 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_started
+  celery_worker:
+    build: .
+    command: celery -A stock_tracker worker -l info
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+    restart: unless-stopped
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+  celery_beat:
+    build: .
+    command: celery -A stock_tracker beat -l info
+    env_file:
+      - .env
+    volumes:
+      - .:/app
+    restart: unless-stopped
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
   postgres:
     image: postgres:16
     container_name: postgres_container_stockinsight_db
-    restart: always
+    restart: unless-stopped
     environment:
        POSTGRES_DB: ${POSTGRES_DB}
        POSTGRES_USER: ${POSTGRES_USER}
