--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,6 +4,8 @@ services:
     command: gunicorn stock_tracker.wsgi:application --bind 0.0.0.0:8000
     env_file:
       - .env.prod
+    volumes:
+      - static_volume:/app/staticfiles
     depends_on:
       - redis
 
@@ -35,9 +37,8 @@ services:
       - "80:80"
     volumes:
       - ./nginx:/etc/nginx/conf.d
-      - static:/app/staticfiles
+      - static_volume:/app/staticfiles
     depends_on:
       - web
-
 volumes:
-  static:
+  static_volume:
