--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,11 @@
 services:
   web:
     build: .
-    command: gunicorn stock_tracker.wsgi:application --bind 0.0.0.0:8000
+    command: >
+      sh -c "
+      python manage.py collectstatic --noinput &&
+      gunicorn stock_tracker.wsgi:application --bind 0.0.0.0:8000
+      "
     env_file:
       - .env.prod
     volumes:
